Add a pop-up menu to change passwords and log out.

--- a/src/main/resources/fragments/head.html
+++ b/src/main/resources/fragments/head.html
@@ -11,3 +11,4 @@ license file in the root directory of this project.
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/external/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="/external/jquery-3.7.1.min.js" type="text/javascript"></script>
+    <script src="/common.js" type="text/javascript"></script>
