--- a/src/main/resources/www/timekeeper/timekeeper.css
+++ b/src/main/resources/www/timekeeper/timekeeper.css
@@ -10,15 +10,31 @@
   display: grid;
   gap: 0 0;
   grid-template-areas:
-    "menu . test"
-    ". clock ."
-    ". . ."
-    ". buttons ."
-    ". . .";
-  grid-template-columns: 20% 60% 20%;
-  grid-template-rows: 20% 40% 20% 10% 10%;
+    "menu . . . test"
+    ". . . . ."
+    ". . clock . ."
+    ". . . . ."
+    ". . start . ."
+    ". . cancel . ."
+    ". . reset . ."
+    ". . . . .";
+  grid-template-columns: 3em 1fr 6fr 1fr 3em;
+  grid-template-rows: 3em 1fr 3fr repeat(4, 1fr) 3em;
   height: 100vh;
   width: 100vw;
+
+  @media (width > 768px)
+  {
+    grid-template-areas:
+      "menu . . . . . test"
+      ". . . . . . ."
+      ". . clock clock clock . ."
+      ". . . . . . ."
+      ". . start cancel reset . ."
+      ". . . . . . .";
+    grid-template-columns: 3em 1fr repeat(3, 2fr) 1fr 3em;
+    grid-template-rows: 3em 1fr 3fr repeat(2, 1fr) 3em;
+  }
 }
 
 .clock
@@ -36,105 +52,78 @@
     "m71 m72 m73 m74 m75 .  .  . t71 t72 t73 t74 t75 . o71 o72 o73 o74 o75";
   grid-template-columns: repeat(19, 1fr);
   grid-template-rows: repeat(7, 1fr);
-}
 
-.m11 { grid-area: m11; }
-.m12 { grid-area: m12; }
-.m13 { grid-area: m13; }
-.m14 { grid-area: m14; }
-.m15 { grid-area: m15; }
-.m21 { grid-area: m21; }
-.m25 { grid-area: m25; }
-.m31 { grid-area: m31; }
-.m35 { grid-area: m35; }
-.m41 { grid-area: m41; }
-.m42 { grid-area: m42; }
-.m43 { grid-area: m43; }
-.m44 { grid-area: m44; }
-.m45 { grid-area: m45; }
-.m51 { grid-area: m51; }
-.m55 { grid-area: m55; }
-.m61 { grid-area: m61; }
-.m65 { grid-area: m65; }
-.m71 { grid-area: m71; }
-.m72 { grid-area: m72; }
-.m73 { grid-area: m73; }
-.m74 { grid-area: m74; }
-.m75 { grid-area: m75; }
-.c31 { grid-area: c31; }
-.c51 { grid-area: c51; }
-.t11 { grid-area: t11; }
-.t12 { grid-area: t12; }
-.t13 { grid-area: t13; }
-.t14 { grid-area: t14; }
-.t15 { grid-area: t15; }
-.t21 { grid-area: t21; }
-.t25 { grid-area: t25; }
-.t31 { grid-area: t31; }
-.t35 { grid-area: t35; }
-.t41 { grid-area: t41; }
-.t42 { grid-area: t42; }
-.t43 { grid-area: t43; }
-.t44 { grid-area: t44; }
-.t45 { grid-area: t45; }
-.t51 { grid-area: t51; }
-.t55 { grid-area: t55; }
-.t61 { grid-area: t61; }
-.t65 { grid-area: t65; }
-.t71 { grid-area: t71; }
-.t72 { grid-area: t72; }
-.t73 { grid-area: t73; }
-.t74 { grid-area: t74; }
-.t75 { grid-area: t75; }
-.o11 { grid-area: o11; }
-.o12 { grid-area: o12; }
-.o13 { grid-area: o13; }
-.o14 { grid-area: o14; }
-.o15 { grid-area: o15; }
-.o21 { grid-area: o21; }
-.o25 { grid-area: o25; }
-.o31 { grid-area: o31; }
-.o35 { grid-area: o35; }
-.o41 { grid-area: o41; }
-.o42 { grid-area: o42; }
-.o43 { grid-area: o43; }
-.o44 { grid-area: o44; }
-.o45 { grid-area: o45; }
-.o51 { grid-area: o51; }
-.o55 { grid-area: o55; }
-.o61 { grid-area: o61; }
-.o65 { grid-area: o65; }
-.o71 { grid-area: o71; }
-.o72 { grid-area: o72; }
-.o73 { grid-area: o73; }
-.o74 { grid-area: o74; }
-.o75 { grid-area: o75; }
-
-.buttons
-{
-  display: grid;
-  gap: 0 0;
-  grid-area: buttons;
-  grid-template-areas:
-    "start cancel reset";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-}
-
-.buttons button
-{
-  background-color: var(--background-color);
-  border: 0.1vw solid var(--accent-color);
-  border-radius: 10vmin;
-  color: var(--accent-color);
-  font-size: 1.75vw;
-}
-
-.buttons button:disabled
-{
-  border: 0.1vw solid var(--disable-color);
-  border-radius: 10vmin;
-  color: var(--disable-color);
+  .m11 { grid-area: m11; }
+  .m12 { grid-area: m12; }
+  .m13 { grid-area: m13; }
+  .m14 { grid-area: m14; }
+  .m15 { grid-area: m15; }
+  .m21 { grid-area: m21; }
+  .m25 { grid-area: m25; }
+  .m31 { grid-area: m31; }
+  .m35 { grid-area: m35; }
+  .m41 { grid-area: m41; }
+  .m42 { grid-area: m42; }
+  .m43 { grid-area: m43; }
+  .m44 { grid-area: m44; }
+  .m45 { grid-area: m45; }
+  .m51 { grid-area: m51; }
+  .m55 { grid-area: m55; }
+  .m61 { grid-area: m61; }
+  .m65 { grid-area: m65; }
+  .m71 { grid-area: m71; }
+  .m72 { grid-area: m72; }
+  .m73 { grid-area: m73; }
+  .m74 { grid-area: m74; }
+  .m75 { grid-area: m75; }
+  .c31 { grid-area: c31; }
+  .c51 { grid-area: c51; }
+  .t11 { grid-area: t11; }
+  .t12 { grid-area: t12; }
+  .t13 { grid-area: t13; }
+  .t14 { grid-area: t14; }
+  .t15 { grid-area: t15; }
+  .t21 { grid-area: t21; }
+  .t25 { grid-area: t25; }
+  .t31 { grid-area: t31; }
+  .t35 { grid-area: t35; }
+  .t41 { grid-area: t41; }
+  .t42 { grid-area: t42; }
+  .t43 { grid-area: t43; }
+  .t44 { grid-area: t44; }
+  .t45 { grid-area: t45; }
+  .t51 { grid-area: t51; }
+  .t55 { grid-area: t55; }
+  .t61 { grid-area: t61; }
+  .t65 { grid-area: t65; }
+  .t71 { grid-area: t71; }
+  .t72 { grid-area: t72; }
+  .t73 { grid-area: t73; }
+  .t74 { grid-area: t74; }
+  .t75 { grid-area: t75; }
+  .o11 { grid-area: o11; }
+  .o12 { grid-area: o12; }
+  .o13 { grid-area: o13; }
+  .o14 { grid-area: o14; }
+  .o15 { grid-area: o15; }
+  .o21 { grid-area: o21; }
+  .o25 { grid-area: o25; }
+  .o31 { grid-area: o31; }
+  .o35 { grid-area: o35; }
+  .o41 { grid-area: o41; }
+  .o42 { grid-area: o42; }
+  .o43 { grid-area: o43; }
+  .o44 { grid-area: o44; }
+  .o45 { grid-area: o45; }
+  .o51 { grid-area: o51; }
+  .o55 { grid-area: o55; }
+  .o61 { grid-area: o61; }
+  .o65 { grid-area: o65; }
+  .o71 { grid-area: o71; }
+  .o72 { grid-area: o72; }
+  .o73 { grid-area: o73; }
+  .o74 { grid-area: o74; }
+  .o75 { grid-area: o75; }
 }
 
 .start
@@ -143,22 +132,10 @@
   padding: 2vh 2vw;
 }
 
-.button_start
-{
-  height: 100%;
-  width: 100%;
-}
-
 .cancel
 {
   grid-area: cancel;
   padding: 2vh 2vw;
-}
-
-.button_cancel
-{
-  height: 100%;
-  width: 100%;
 }
 
 .reset
@@ -167,165 +144,228 @@
   padding: 2vh 2vw;
 }
 
-.button_reset
+#button_start, #button_cancel, #button_reset
 {
+  background-color: var(--background-color);
+  border: 0.1vw solid var(--accent-color);
+  border-radius: 10vmin;
+  color: var(--accent-color);
+  font-size: 5vmin;
   height: 100%;
   width: 100%;
+}
+
+#button_start:disabled, #button_cancel:disabled, #button_reset:disabled
+{
+  border: 0.1vw solid var(--disable-color);
+  border-radius: 10vmin;
+  color: var(--disable-color);
 }
 
 .menu
 {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   grid-area: menu;
-  justify-content: flex-start;
-}
-
-.button_menu
-{
-  background-color: var(--background-color);
-  border: 0;
-  color: var(--foreground-color);
-  font-size: 1vw;
-  padding: 0.5vw;
+  justify-content: center;
 }
 
 .test
 {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   grid-area: test;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
-.button_test
+#button_menu, #button_test
 {
   background-color: var(--background-color);
   border: 0;
   color: var(--foreground-color);
-  font-size: 1vw;
   padding: 0.5vw;
 }
 
-.test_bg
+#test
 {
-  background-color: var(--background-color);
-  height: 100vh;
-  left: 0;
-  opacity: 25%;
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  z-index: 100;
-}
-
-.test_main
-{
-  background-color: var(--background-color);
-  border: 0.1vw solid var(--foreground-color);
-  border-radius: 2vw;
-  color: var(--foreground-color);
-  height: calc(100vh - 10vw);
-  left: 3vw;
-  padding: 2vw;
-  position: fixed;
-  top: 3vw;
-  width: 90vw;
-  z-index: 101;
-}
-
-.container2
-{
-  align-items: center;
-  display: grid;
-  gap: 0 0;
-  grid-template-areas:
-    ". . . test_exit"
-    ". test_title test_title ."
-    ". test_start test_end_game ."
-    ". test_end test_cancel ."
-    ". . . .";
-  grid-template-columns: 20% 30% 30% 20%;
-  grid-template-rows: 20% 10% 25% 25% 20%;
-  height: 100%;
-  width: 100%;
-}
-
-.test_title
-{
-  font-size: 2vw;
-  grid-area: test_title;
-  height: 100%;
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
-}
-
-.test_title > h3
-{
-  margin-block-end: 0;
-  margin-block-start: 0;
-}
-
-.test_start
-{
-  background-color: var(--background-color);
-  border: 0.1vw solid var(--foreground-color);
-  border-radius: 2vw;
-  color: var(--foreground-color);
-  font-size: 2vw;
-  grid-area: test_start;
-  height: 75%;
-  margin: 0 auto;
-  width: 75%;
-}
-
-.test_end_game
-{
-  background-color: var(--background-color);
-  border: 0.1vw solid var(--foreground-color);
-  border-radius: 2vw;
-  color: var(--foreground-color);
-  font-size: 2vw;
-  grid-area: test_end_game;
-  height: 75%;
-  margin: 0 auto;
-  width: 75%;
-}
-
-.test_end
-{
-  background-color: var(--background-color);
-  border: 0.1vw solid var(--foreground-color);
-  border-radius: 2vw;
-  color: var(--foreground-color);
-  font-size: 2vw;
-  grid-area: test_end;
-  height: 75%;
-  margin: 0 auto;
-  width: 75%;
-}
-
-.test_cancel
-{
-  background-color: var(--background-color);
-  border: 0.1vw solid var(--foreground-color);
-  border-radius: 2vw;
-  color: var(--foreground-color);
-  font-size: 2vw;
-  grid-area: test_cancel;
-  height: 75%;
-  margin: 0 auto;
-  width: 75%;
-}
-
-.test_exit
-{
-  align-self: start;
-  background-color: var(--background-color);
+  background-color: rgba(0, 0, 0, 0.75);
   border: 0;
-  color: var(--foreground-color);
-  grid-area: test_exit;
-  justify-self: right;
+  height: 100dvh;
+  margin: 0;
+  max-height: 100dvh;
+  max-width: 100dvw;
   padding: 0;
+  width: 100dvw;
+
+  &[open]
+  {
+    animation: show-test 0.5s ease normal;
+  }
+
+  &.hide
+  {
+    animation: hide-test 0.5s ease normal;
+  }
+
+  .test_body
+  {
+    align-items: center;
+    display: grid;
+    gap: 0 0;
+    grid-template-areas:
+      ". . . . test_exit"
+      ". . test_title . ."
+      ". . . . ."
+      ". . test_start . ."
+      ". . test_end_game . ."
+      ". . test_end . ."
+      ". . test_cancel . ."
+      ". . . . .";
+    grid-template-columns: 3em 1fr 6fr 1fr 3em;
+    grid-template-rows: 3em 2fr 1fr repeat(4, 2fr) 3em;
+    height: 100%;
+    width: 100%;
+
+    @media (width > 768px)
+    {
+      grid-template-areas:
+        ". . . . . test_exit"
+        ". . . . . ."
+        ". . test_title test_title . ."
+        ". . test_start test_end_game . ."
+        ". . test_end test_cancel . ."
+        ". . . . . ."
+        ". . . . . .";
+      grid-template-columns: 3em 1fr 3fr 3fr 1fr 3em;
+      grid-template-rows: 3em 20fr 10fr 25fr 25fr 20fr 3em;
+    }
+  }
+
+  .test_title
+  {
+    align-items: center;;
+    display: flex;
+    font-size: 7.5vmin;
+    grid-area: test_title;
+    height: 100%;
+    justify-content: center;;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+  }
+
+  .test_title > h3
+  {
+    color: var(--foreground-color);
+    margin-block-end: 0;
+    margin-block-start: 0;
+  }
+
+  .test_start
+  {
+    background-color: var(--menu-background-color);
+    border: 0.1vw solid var(--foreground-color);
+    border-radius: 2vw;
+    color: var(--foreground-color);
+    font-size: 5vmin;
+    grid-area: test_start;
+    height: 75%;
+    margin: 0 auto;
+    width: 75%;
+  }
+
+  .test_start:hover
+  {
+    background-color: var(--accent-color);
+  }
+
+  .test_end_game
+  {
+    background-color: var(--menu-background-color);
+    border: 0.1vw solid var(--foreground-color);
+    border-radius: 2vw;
+    color: var(--foreground-color);
+    font-size: 5vmin;
+    grid-area: test_end_game;
+    height: 75%;
+    margin: 0 auto;
+    width: 75%;
+  }
+
+  .test_end_game:hover
+  {
+    background-color: var(--accent-color);
+  }
+
+  .test_end
+  {
+    background-color: var(--menu-background-color);
+    border: 0.1vw solid var(--foreground-color);
+    border-radius: 2vw;
+    color: var(--foreground-color);
+    font-size: 5vmin;
+    grid-area: test_end;
+    height: 75%;
+    margin: 0 auto;
+    width: 75%;
+  }
+
+  .test_end:hover
+  {
+    background-color: var(--accent-color);
+  }
+
+  .test_cancel
+  {
+    background-color: var(--menu-background-color);
+    border: 0.1vw solid var(--foreground-color);
+    border-radius: 2vw;
+    color: var(--foreground-color);
+    font-size: 5vmin;
+    grid-area: test_cancel;
+    height: 75%;
+    margin: 0 auto;
+    width: 75%;
+  }
+
+  .test_cancel:hover
+  {
+    background-color: var(--accent-color);
+  }
+
+  .test_exit
+  {
+    align-self: center;
+    background-color: var(--background-color);
+    border: 0;
+    color: var(--foreground-color);
+    display: flex;
+    grid-area: test_exit;
+    justify-self: center;
+    padding: 0;
+  }
+}
+
+@keyframes show-test
+{
+  from
+  {
+    transform: translateX(100%);
+  }
+  to
+  {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes hide-test
+{
+  from
+  {
+    transform: translateX(0%);
+  }
+  to
+  {
+    transform: translateX(100%);
+  }
 }
