--- a/src/main/resources/www/admin/seasons/seasons.css
+++ b/src/main/resources/www/admin/seasons/seasons.css
@@ -62,6 +62,12 @@
   text-align: center;
 }
 
+.seasons_tile select
+{
+  font-size: 1.25em;
+  text-align: center;
+}
+
 .seasons_tile.disabled p
 {
   opacity: 0.25;
