--- a/src/main/resources/fragments/popup_menu_admin.html
+++ b/src/main/resources/fragments/popup_menu_admin.html
@@ -4,8 +4,18 @@ Copyright (c) 2024 Brian Kircher
 Open Source Software; you can modify and/or share it under the terms of BSD
 license file in the root directory of this project.
 -->
-    <dialog id="popup_menu" class="popup_menu">
+    <dialog id="popup_menu" class="popup_menu_admin">
       <div class="popup_body">
+        <div class="wifi_info">
+          <button>
+            <!--#str_popup_menu_wifi_info-->
+          </button>
+        </div>
+        <div class="change_password">
+          <button>
+            <!--#str_popup_menu_change_password-->
+          </button>
+        </div>
         <div class="logout">
           <button>
             <!--#str_popup_menu_logout-->
