--- a/src/main/resources/www/styles.css
+++ b/src/main/resources/www/styles.css
@@ -211,7 +211,76 @@ select
   color: var(--foreground-color);
 }
 
-#popup_menu
+.popup_menu
+{
+  background-color: var(--shadow);
+  border: 0;
+  height: 100dvh;
+  margin: 0;
+  max-height: 100dvh;
+  max-width: 100dvw;
+  padding: 0;
+  width: 100dvw;
+
+  &[open]
+  {
+    animation: show-popup-menu 0.5s ease normal;
+  }
+
+  &.hide
+  {
+    animation: hide-popup-menu 0.5s ease normal;
+  }
+
+  .popup_body
+  {
+    display: grid;
+    grid-template-columns: 3em 1fr 3em;
+    grid-template-rows: 3em 1fr 4em 1fr 3em;
+    height: 100%;
+    width: 100%;
+  }
+
+  .logout
+  {
+    align-items: center;
+    display: flex;
+    grid-column: 2;
+    grid-row: 3;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
+  }
+
+  button
+  {
+    background-color: var(--menu-background-color);
+    color: var(--foreground-color);
+    font-size: 2em;
+  }
+
+  button:hover
+  {
+    background-color: var(--accent-color);
+  }
+
+  .close
+  {
+    align-items: center;
+    color: var(--foreground-color);
+    display: flex;
+    grid-column: 3;
+    grid-row: 1;
+    justify-content: center;
+  }
+
+  .close span
+  {
+    font-size: 3em;
+  }
+}
+
+.popup_menu_user
 {
   background-color: var(--shadow);
   border: 0;
@@ -258,6 +327,97 @@ select
     display: flex;
     grid-column: 2;
     grid-row: 5;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
+  }
+
+  button
+  {
+    background-color: var(--menu-background-color);
+    color: var(--foreground-color);
+    font-size: 2em;
+  }
+
+  button:hover
+  {
+    background-color: var(--accent-color);
+  }
+
+  .close
+  {
+    align-items: center;
+    color: var(--foreground-color);
+    display: flex;
+    grid-column: 3;
+    grid-row: 1;
+    justify-content: center;
+  }
+
+  .close span
+  {
+    font-size: 3em;
+  }
+}
+
+.popup_menu_admin
+{
+  background-color: var(--shadow);
+  border: 0;
+  height: 100dvh;
+  margin: 0;
+  max-height: 100dvh;
+  max-width: 100dvw;
+  padding: 0;
+  width: 100dvw;
+
+  &[open]
+  {
+    animation: show-popup-menu 0.5s ease normal;
+  }
+
+  &.hide
+  {
+    animation: hide-popup-menu 0.5s ease normal;
+  }
+
+  .popup_body
+  {
+    display: grid;
+    grid-template-columns: 3em 1fr 3em;
+    grid-template-rows: 3em 1fr 4em 2em 4em 2em 4em 1fr 3em;
+    height: 100%;
+    width: 100%;
+  }
+
+  .wifi_info
+  {
+    align-items: center;
+    display: flex;
+    grid-column: 2;
+    grid-row: 3;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .change_password
+  {
+    align-items: center;
+    display: flex;
+    grid-column: 2;
+    grid-row: 5;
+    height: 100%;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .logout
+  {
+    align-items: center;
+    display: flex;
+    grid-column: 2;
+    grid-row: 7;
     height: 100%;
     justify-content: center;
     width: 100%;
@@ -357,6 +517,133 @@ select
     > div button
     {
       font-size: 1.5em;
+    }
+  }
+}
+
+.wifi_info_container
+{
+  background-color: var(--background-color);
+  border: 0.25em solid var(--accent-color);
+  border-radius: 1em;
+  color: var(--foreground-color);
+  display: grid;
+  font-size: 1.5em;
+  grid-template-rows: 2em 0.5em 2em 2em 0.5em 2em 2em 0.5em 2em;
+  padding: 1em;
+  width: 13em;
+
+  .title
+  {
+    align-items: center;
+    display: flex;
+    font-size: 1.5em;
+    grid-row: 1;
+    justify-content: center;
+  }
+
+  .ssid
+  {
+    align-items: center;
+    display: flex;
+    grid-row: 3;
+    justify-content: center;
+  }
+
+  .ssid_input
+  {
+    align-items: center;
+    display: flex;
+    grid-row: 4;
+    justify-content: center;
+  }
+
+  .password
+  {
+    align-items: center;
+    display: flex;
+    grid-row: 6;
+    justify-content: center;
+  }
+
+  .password_input
+  {
+    align-items: center;
+    display: flex;
+    grid-row: 7;
+    justify-content: center;
+  }
+
+  .buttons
+  {
+    align-items: center;
+    display: flex;
+    grid-row: 9;
+    justify-content: center;
+
+    button
+    {
+      margin-left: 0.5em;
+    }
+
+    button:first-of-type
+    {
+      margin-left: 0;
+    }
+  }
+
+  input[type="text"],
+  input[type="password"]
+  {
+    text-align: center;
+  }
+
+  @media (width > 768px)
+  {
+    grid-template-columns: 10em 10em;
+    grid-template-rows: 2em 0.5em 2em 0.5em 2em 0.5em 2em;
+    width: 20em;
+
+    .title
+    {
+      grid-column: 1 / span 2;
+      grid-row: 1;
+    }
+
+    .ssid
+    {
+      grid-column: 1;
+      grid-row: 3;
+    }
+
+    .ssid_input
+    {
+      grid-column: 2;
+      grid-row: 3;
+    }
+
+    .password
+    {
+      grid-column: 1;
+      grid-row: 5;
+    }
+
+    .password_input
+    {
+      grid-column: 2;
+      grid-row: 5;
+    }
+
+    .buttons
+    {
+      grid-column: 1 / span 2;
+      grid-row: 7;
+    }
+
+    input[type="text"],
+    input[type="password"]
+    {
+      text-align: left;
     }
   }
 }
