Allow the accent color to be changed.

--- a/src/main/resources/fragments/popup_menu_admin.html
+++ b/src/main/resources/fragments/popup_menu_admin.html
@@ -6,6 +6,11 @@ license file in the root directory of this project.
 -->
     <dialog id="popup_menu" class="popup_menu_admin">
       <div class="popup_body">
+        <div class="accent_color">
+          <button>
+            <!--#str_popup_menu_accent_color-->
+          </button>
+        </div>
         <div class="wifi_info">
           <button>
             <!--#str_popup_menu_wifi_info-->
