--- a/src/main/resources/www/judge/judge.css
+++ b/src/main/resources/www/judge/judge.css
@@ -270,7 +270,7 @@
         border-radius: 1em;
         display: grid;
         grid-template-columns: 1fr;
-        margin: 0.5em;
+        margin: 1.5em 0.5em;
         padding: 0.5em;
 
         hr
