Add a button for downloading a CSV of the scores.

--- a/src/main/resources/www/admin/scores/scores.css
+++ b/src/main/resources/www/admin/scores/scores.css
@@ -152,6 +152,11 @@
   padding: 0 0.1em;
 }
 
+.scores_container .fa:not([class*="disabled"])
+{
+  cursor: pointer;
+}
+
 .scores_container .search .input
 {
   align-items: center;
