Move configuration into a config page

--- a/src/main/resources/www/styles.css
+++ b/src/main/resources/www/styles.css
@@ -47,6 +47,7 @@
   --color-yellow: #bb8801;
   --color-white: #ffffff;
   --disable-color: var(--color-gray6);
+  --error-color: var(<!--#error-color-->);
   --foreground-color: var(--color-white);
   --menu-background-color: var(--color-gray3);
   --menu-border-color: var(--color-gray4);
@@ -327,108 +328,6 @@ select
     display: flex;
     grid-column: 2;
     grid-row: 5;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
-  }
-
-  button
-  {
-    background-color: var(--menu-background-color);
-    color: var(--foreground-color);
-    font-size: 2em;
-  }
-
-  button:hover
-  {
-    background-color: var(--accent-color);
-  }
-
-  .close
-  {
-    align-items: center;
-    color: var(--foreground-color);
-    display: flex;
-    grid-column: 3;
-    grid-row: 1;
-    justify-content: center;
-  }
-
-  .close span
-  {
-    font-size: 3em;
-  }
-}
-
-.popup_menu_admin
-{
-  background-color: var(--shadow);
-  border: 0;
-  height: 100dvh;
-  margin: 0;
-  max-height: 100dvh;
-  max-width: 100dvw;
-  padding: 0;
-  width: 100dvw;
-
-  &[open]
-  {
-    animation: show-popup-menu 0.5s ease normal;
-  }
-
-  &.hide
-  {
-    animation: hide-popup-menu 0.5s ease normal;
-  }
-
-  .popup_body
-  {
-    display: grid;
-    grid-template-columns: 3em 1fr 3em;
-    grid-template-rows: 3em 1fr 4em 2em 4em 2em 4em 2em 4em 1fr 3em;
-    height: 100%;
-    width: 100%;
-  }
-
-  .accent_color
-  {
-    align-items: center;
-    display: flex;
-    grid-column: 2;
-    grid-row: 3;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .wifi_info
-  {
-    align-items: center;
-    display: flex;
-    grid-column: 2;
-    grid-row: 5;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .change_password
-  {
-    align-items: center;
-    display: flex;
-    grid-column: 2;
-    grid-row: 7;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .logout
-  {
-    align-items: center;
-    display: flex;
-    grid-column: 2;
-    grid-row: 9;
     height: 100%;
     justify-content: center;
     width: 100%;
