--- a/src/main/resources/www/referee/referee.css
+++ b/src/main/resources/www/referee/referee.css
@@ -400,7 +400,7 @@
 
 .score_container .mission .error .mission_error
 {
-  background-color: var(--accent-color);
+  background-color: var(--error-color);
   border-radius: 0 0 0.25em 0.25em;
   color: var(--foreground-color);
   font-size: 1.5em;
