--- a/src/main/resources/www/standings/standings.css
+++ b/src/main/resources/www/standings/standings.css
@@ -34,23 +34,23 @@ html, body
   display: grid;
   height: 100vh;
   grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
-  grid-template-columns: 2.5% repeat(2, 10%) 45% repeat(3, 10%) 2.5%;
+  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 45% repeat(3, 10%) 2.5%;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    ". .     .     .     .     .     .     ."
-    ". logo1 logo1 event event logo2 logo2 ."
-    ". .     .     .     .     .     .     ."
-    ". plt   numt  namet scrt  e1t   e2t   ."
-    ". pl0   num0  name0 scr0  e10   e20   ."
-    ". pl1   num1  name1 scr1  e11   e21   ."
-    ". pl2   num2  name2 scr2  e12   e22   ."
-    ". pl3   num3  name3 scr3  e13   e23   ."
-    ". pl4   num4  name4 scr4  e14   e24   ."
-    ". pl5   num5  name5 scr5  e15   e25   ."
-    ". pl6   num6  name6 scr6  e16   e26   ."
-    ". pl7   num7  name7 scr7  e17   e27   ."
-    ". .     .     .     .     .     .     ." ;
+    ". .     .     .     .     .     .     .     ."
+    ". logo1 logo1 logo1 event event logo2 logo2 ."
+    ". .     .     .     .     .     .     .     ."
+    ". plt   numt  namet namet scrt  e1t   e2t   ."
+    ". pl0   num0  name0 name0 scr0  e10   e20   ."
+    ". pl1   num1  name1 name1 scr1  e11   e21   ."
+    ". pl2   num2  name2 name2 scr2  e12   e22   ."
+    ". pl3   num3  name3 name3 scr3  e13   e23   ."
+    ". pl4   num4  name4 name4 scr4  e14   e24   ."
+    ". pl5   num5  name5 name5 scr5  e15   e25   ."
+    ". pl6   num6  name6 name6 scr6  e16   e26   ."
+    ". pl7   num7  name7 name7 scr7  e17   e27   ."
+    ". .     .     .     .     .     .     .     ." ;
 }
 
 .logo1
@@ -59,9 +59,6 @@ html, body
   display: flex;
   grid-area: logo1;
   justify-content: center;
-  max-height: 100%;
-  object-fit: contain;
-  width: 100%;
 
   img
   {
