--- a/src/main/resources/www/standings/standings.css
+++ b/src/main/resources/www/standings/standings.css
@@ -12,15 +12,15 @@ html, body
 
 .left
 {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: left;
 }
 
 .center
 {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
 }
 
@@ -32,9 +32,6 @@ html, body
 .container
 {
   display: grid;
-  height: 100vh;
-  grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
-  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 45% repeat(3, 10%) 2.5%;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
@@ -51,6 +48,12 @@ html, body
     ". pl6   num6  name6 name6 scr6  e16   e26   ."
     ". pl7   num7  name7 name7 scr7  e17   e27   ."
     ". .     .     .     .     .     .     .     ." ;
+  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 45% repeat(3, 10%) 2.5%;
+  grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  width: 100vw;
 }
 
 .logo1
@@ -62,15 +65,15 @@ html, body
 
   img
   {
-    max-width: 100%;
     max-height: 100%;
+    max-width: 100%;
   }
 }
 
 .event
 {
-  grid-area: event;
   font-size: 200%;
+  grid-area: event;
 }
 
 .logo2
@@ -85,8 +88,8 @@ html, body
 
   img
   {
-    max-width: 100%;
     max-height: 100%;
+    max-width: 100%;
   }
 }
 
