--- a/src/main/resources/www/timekeeper/timekeeper.css
+++ b/src/main/resources/www/timekeeper/timekeeper.css
@@ -21,6 +21,8 @@
   grid-template-columns: 3em 1fr 6fr 1fr 3em;
   grid-template-rows: 3em 1fr 3fr repeat(4, 1fr) 3em;
   height: 100vh;
+  overflow: hidden;
+  position: fixed;
   width: 100vw;
 
   @media (width > 768px)
