--- a/src/main/resources/www/timer/timer.css
+++ b/src/main/resources/www/timer/timer.css
@@ -12,6 +12,8 @@
   grid-template-columns: 10vw 1fr 10vw;
   grid-template-rows: 15vw 1fr 15vw;
   height: 100vh;
+  overflow: hidden;
+  position: fixed;
   width: 100vw;
 }
 
