--- a/src/main/resources/www/admin/scores/scores.css
+++ b/src/main/resources/www/admin/scores/scores.css
@@ -19,7 +19,7 @@
   color: var(--foreground-color);
   display: grid;
   grid-row: 1;
-  grid-template-columns: 10em 1fr 12em 12em 12em 12em;
+  grid-template-columns: 10em 1fr 14em 14em 14em 14em;
   height: 3em;
   margin-top: 0.1em;
   width: 100%;
@@ -47,7 +47,7 @@
   border: 0.1em solid var(--background-color);
   border-radius: 1em;
   display: grid;
-  grid-template-columns: 10em 1fr 12em 12em 12em 12em;
+  grid-template-columns: 10em 1fr 14em 14em 14em 14em;
   height: calc(3em - 0.2em);
   width: calc(100% - 0.2em);
 }
@@ -79,6 +79,11 @@
   grid-column: 2 / span 2;
 }
 
+.scores_container .two_matches .name
+{
+  grid-column: 2 / span 3;
+}
+
 .scores_container .match1,
 .scores_container .match2,
 .scores_container .match3,
@@ -102,6 +107,11 @@
   grid-column: 4;
 }
 
+.scores_container .two_matches .match1
+{
+  grid-column: 5;
+}
+
 .scores_container .match2
 {
   grid-column: 4;
@@ -110,6 +120,11 @@
 .scores_container .three_matches .match2
 {
   grid-column: 5;
+}
+
+.scores_container .two_matches .match2
+{
+  grid-column: 6;
 }
 
 .scores_container .match3
@@ -122,12 +137,22 @@
   grid-column: 6;
 }
 
+.scores_container .two_matches .match3
+{
+  display: none;
+}
+
 .scores_container .match4
 {
   grid-column: 6;
 }
 
 .scores_container .three_matches .match4
+{
+  display: none;
+}
+
+.scores_container .two_matches .match4
 {
   display: none;
 }
