--- a/src/main/resources/www/scoreboard/scoreboard.css
+++ b/src/main/resources/www/scoreboard/scoreboard.css
@@ -43,6 +43,33 @@ html, body
   width: 100%;
 }
 
+.container2
+{
+  display: grid;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    ". .     .     .     .     .     .     .     .     ."
+    ". logo1 logo1 logo1 event event logo2 logo2 logo2 ."
+    ". .     .     .     .     .     .     .     .     ."
+    ". plt   numt  namet namet hight hight m1t   m2t   ."
+    ". pl0   num0  name0 name0 high0 high0 m10   m20   ."
+    ". pl1   num1  name1 name1 high1 high1 m11   m21   ."
+    ". pl2   num2  name2 name2 high2 high2 m12   m22   ."
+    ". pl3   num3  name3 name3 high3 high3 m13   m23   ."
+    ". pl4   num4  name4 name4 high4 high4 m14   m24   ."
+    ". pl5   num5  name5 name5 high5 high5 m15   m25   ."
+    ". pl6   num6  name6 name6 high6 high6 m16   m26   ."
+    ". pl7   num7  name7 name7 high7 high7 m17   m27   ."
+    ". .     .     .     .     .     .     .     .     ." ;
+  grid-template-columns: 2.5% repeat(2, 7.5%) 5% 52.5% 2.5% 5% repeat(2, 7.5%) 2.5%;
+  grid-template-rows: 2.5% 20.5% 2.5% repeat(9, 8%) 2.5%;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+  width: 100vw;
+}
+
 .container3
 {
   display: grid;
