--- a/src/main/resources/www/admin/teams/teams.css
+++ b/src/main/resources/www/admin/teams/teams.css
@@ -19,10 +19,15 @@
   color: var(--foreground-color);
   display: grid;
   grid-row: 1;
-  grid-template-columns: 10em 1fr 10em 10em;
+  grid-template-columns: 0 10em 1fr 10em 10em;
   height: 3em;
   margin-top: 0.1em;
   width: 100%;
+}
+
+.teams_container.have_divisions .heading
+{
+  grid-template-columns: 10em 10em 1fr 10em 10em;
 }
 
 .teams_container .body
@@ -47,9 +52,14 @@
   border: 0.1em solid var(--background-color);
   border-radius: 1em;
   display: grid;
-  grid-template-columns: 10em 1fr 10em 10em;
+  grid-template-columns: 0 10em 1fr 10em 10em;
   height: calc(3em - 0.2em);
   width: calc(100% - 0.2em);
+}
+
+.teams_container.have_divisions .row
+{
+  grid-template-columns: 10em 10em 1fr 10em 10em;
 }
 
 .teams_container .row:hover
@@ -57,12 +67,26 @@
   border: 0.1em solid var(--accent-color);
 }
 
+.teams_container .division
+{
+  align-items: center;
+  display: none;
+  font-size: 1.5em;
+  grid-column: 1;
+  justify-content: center;
+}
+
+.teams_container.have_divisions .division
+{
+  display: flex;
+}
+
 .teams_container .number
 {
   align-items: center;
   display: flex;
   font-size: 1.5em;
-  grid-column: 1;
+  grid-column: 2;
   justify-content: center;
 }
 
@@ -71,7 +95,7 @@
   align-items: center;
   display: flex;
   font-size: 1.5em;
-  grid-column: 2;
+  grid-column: 3;
 }
 
 .teams_container .at_event
@@ -79,7 +103,7 @@
   align-items: center;
   display: flex;
   font-size: 1.5em;
-  grid-column: 3;
+  grid-column: 4;
   justify-content: center;
 }
 
@@ -88,7 +112,7 @@
   align-items: center;
   display: flex;
   font-size: 1.5em;
-  grid-column: 4;
+  grid-column: 5;
   justify-content: center;
 }
 
@@ -124,10 +148,16 @@
   display: grid;
   gap: 0 0;
   grid-auto-flow: row;
-  grid-template-rows: 3em 1em 3em 1em 3em 1em 3em;
+  grid-template-rows: 3em 1em 0 0 3em 1em 3em 1em 3em;
   height: 15em;
   justify-items: center;
   padding: 1em;
+}
+
+.teams_editor_container.have_divisions
+{
+  grid-template-rows: 3em 1em 3em 1em 3em 1em 3em 1em 3em;
+  height: 19em;
 }
 
 .teams_editor_container .title
@@ -137,12 +167,37 @@
   text-align: center;
 }
 
+.teams_editor_container .division
+{
+  display: none;
+  font-size: 1.5em;
+  gap: 0 0;
+  grid-row: 3;
+  grid-template-columns: 7em 30em;
+  text-align: center;
+}
+
+.teams_editor_container.have_divisions .division
+{
+  display: grid;
+}
+
+.teams_editor_container .division .label
+{
+  grid-column: 1;
+}
+
+.teams_editor_container .division .input
+{
+  grid-column: 2;
+}
+
 .teams_editor_container .number
 {
   display: grid;
   font-size: 1.5em;
   gap: 0 0;
-  grid-row: 3;
+  grid-row: 5;
   grid-template-columns: 7em 30em;
   text-align: center;
 }
@@ -162,7 +217,7 @@
   display: grid;
   font-size: 1.5em;
   gap: 0 0;
-  grid-row: 5;
+  grid-row: 7;
   grid-template-columns: 7em 30em;
   text-align: center;
 }
@@ -180,6 +235,6 @@
 .teams_editor_container .buttons
 {
   font-size: 1.5em;
-  grid-row: 7;
+  grid-row: 9;
   text-align: center;
 }
