--- a/src/main/resources/www/styles.css
+++ b/src/main/resources/www/styles.css
@@ -113,7 +113,8 @@ input[type="date"]:focus
 }
 
 input[type="text"],
-input[type="password"]
+input[type="password"],
+input[type="number"]
 {
   background-color: var(--background-color);
   border: 0;
