--- a/src/main/resources/www/scoreboard/scoreboard.css
+++ b/src/main/resources/www/scoreboard/scoreboard.css
@@ -144,6 +144,19 @@ html, body
   grid-area: event;
 }
 
+.event .divisions
+{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.event .divisions .division
+{
+  font-size: 75%;
+}
+
 .logo2
 {
   align-items: center;
